--- a/src/dislife-text-special-bureau.html
+++ b/src/dislife-text-special-bureau.html
@@ -40,47 +40,211 @@
 		</div>
 	</div>
 	<div class="section-gray">
-		<div class="container">
+		<div class="container container_news">
 			<div class="l-news">
 				<div class="l-col1">
-					<div class="special">
-						<form action="#" class="send-message">
-							<div class="send-message__title">Обратиться к Сергею Миронову</div>
-							<label>
-								<span class="send-message__label">Ваша почта</span>
-								<input type="main" class="input-full input-full_white">
-							</label>
-							<div class="send-message__text">Пожалуйста, указывайте адрес почты, по которому с вами действительно можно связаться, иначе мы не сможем вам ответить.</div>
-							<label>
-								<span class="send-message__label">Сообщение</span>
-								<textarea cols="30" rows="10" class="textarea-full textarea-full_white"></textarea>
-							</label>
-							<div class="send-message__row">
-								<div class="send-message__file">
-									<span class="send-message__label">Документы</span>
-									<label class="file">
-										<input type="file">
-										<i class="fa fa-plus-square"></i>
-										<span>Добавить файл</span>
-									</label>
-								</div>
-								<div class="captcha">
-									<img src="img/captcha-gray.png" alt="">
-								</div>
+					<form action="#" class="send-message">
+						<div class="send-message__title">Обратиться к Сергею Миронову</div>
+						<label>
+							<span class="send-message__label">Ваша почта</span>
+							<input type="main" class="input-full input-full_white">
+						</label>
+						<div class="send-message__text">Пожалуйста, указывайте адрес почты, по которому с вами действительно можно связаться, иначе мы не сможем вам ответить.</div>
+						<label>
+							<span class="send-message__label">Сообщение</span>
+							<textarea cols="30" rows="10" class="textarea-full textarea-full_white"></textarea>
+						</label>
+						<div class="send-message__row">
+							<div class="send-message__file">
+								<span class="send-message__label">Документы</span>
+								<label class="file">
+									<input type="file">
+									<i class="fa fa-plus-square"></i>
+									<span>Добавить файл</span>
+								</label>
 							</div>
-							<div class="send-message__bottom">
-								<button class="btn-full btn-full_orange">
-									<span>Отправить </span>
-								</button>
+							<div class="captcha">
+								<img src="img/captcha-gray.png" alt="">
 							</div>
-						</form>
+						</div>
+						<div class="send-message__bottom">
+							<button class="btn-full btn-full_orange">
+								<span>Отправить </span>
+							</button>
+						</div>
+						<div class="block-alert">
+							<i class="fa fa-exclamation-triangle"></i>
+							<p>Мы оставляем за собой право не отвечать на обращения без документов. Постарайтесь подтвердить свою жалобу настолько, насколько это возможно</p>
+						</div>
+					</form>
+				</div>
+				<div class="l-col2">
+					<div class="side-info">
+						<div class="side-info__title">Мы попробуем помочь</div>
+						<ul class="side-info__list">
+							<li><i class="icon-home"></i><span>с жильем</span></li>
+							<li><i class="icon-drugs"></i><span>с лекарствами</span></li>
+							<li><i class="icon-reabilitation"></i><span>со средствами реабилитации</span></li>
+							<li><i class="icon-edu"></i><span>со школой</span></li> 
+						</ul>
 					</div>
 				</div>
-				<div class="l-col2"></div>
 			</div>
 		</div>
 	</div>
-	//=include partials/more.html
+	<div class="more more_white">
+		<div class="container">
+			<h2 class="h2 h2_mb">Как это работает</h2>
+			<div class="row">
+				<div class="col-md">
+					<!-- begin item  -->
+					<div class="item item_orange item_mod item_lg">
+						<a href="#" class="btn btn_orange">СПЕЦПРОЕКТЫ</a>
+						<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Заведующий домом жизни</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p class="item__txt-title">Как правильно экономить на авиабилетах? Руководство к действию</p>
+								<div class="man">
+									<div class="man__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="man__text">Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+				</div>
+				<div class="col-sm">					
+					<!-- begin item  -->
+					<div class="item item_orange item_mod">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Дети Гольяново</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->					
+					<!-- begin item  -->
+					<div class="item item_orange item_mod">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Дети Гольяново</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+				</div>				
+			</div>
+			<div class="js-load-block" style="display: none;">
+				<div class="row">
+					<div class="col-md">
+						<!-- begin item  -->
+						<div class="item item_orange item_mod item_lg">
+							<a href="#" class="btn btn_orange">СПЕЦПРОЕКТЫ</a>
+							<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
+								<div class="item__title">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Заведующий домом жизни</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p class="item__txt-title">Как правильно экономить на авиабилетах? Руководство к действию</p>
+									<div class="man">
+										<div class="man__img">
+											<img src="img/man-o.png" alt="">
+										</div>
+										<div class="man__text">Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</div>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">					
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Дети Гольяново</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->					
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Дети Гольяново</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>				
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="load-more">
+		<button class="btn-load js-load-btn">
+			<i class="fa fa-repeat"></i>
+			<span>Загрузить еще</span>
+		</button>
+		<div class="container main">
+		</div>
+	</div>
 	//=include partials/footer.html
 </div>
 <!-- END out-->
