--- a/src/dislife-text-special-bureau.html
+++ b/src/dislife-text-special-bureau.html
@@ -8,6 +8,21 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
+	<div class="fullheight" style="background-image: url(img/bureau-big.jpg)">
+		<div class="fullheight__in">
+			<div class="fullheight__bl">
+				<div class="fullheight__el-mod">
+					<div class="news-line">
+						<a href="#" class="btn btn_orange">СПЕЦПРОЕКТЫ</a>
+					</div>
+					<div class="news-header">
+						<h1 class="h1">Бюро справедливости</h1>
+						<div class="text-big">Сергей Миронов помогает Dislife.ru добиться справедливости, когда законы демонстрируют ее отсутствие</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="container container_news">
 		<div class="l-news">
 			<div class="l-col1">
