--- a/src/dislife-main-polytique.html
+++ b/src/dislife-main-polytique.html
@@ -245,6 +245,9 @@
 								</a>
 							</li>
 						</ul>
+						<div class="news-column__more">
+							<a href="#" class="news-main__link">Все новости<i class="fa fa-angle-right"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
