--- a/src/dislife-text-special-patronus.html
+++ b/src/dislife-text-special-patronus.html
@@ -8,7 +8,7 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="fullheight" style="background-image: url(img/full-patronus.jpg)">
+	<div class="fullheight fullheight_special" style="background-image: url(img/full-patronus.jpg)">
 		<div class="fullheight__in">
 			<div class="fullheight__bl">
 				<div class="fullheight__el">
