--- a/src/dislife-text-special-puzzles.html
+++ b/src/dislife-text-special-puzzles.html
@@ -7,8 +7,8 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	//=include partials/header.html
-	<div class="fullheight" style="background-image: url(img/nogi-big.jpg)">
+	//=include partials/header-profile.html
+	<div class="fullheight fullheight_special" style="background-image: url(img/nogi-big.jpg)">
 		<div class="fullheight__in">
 			<div class="fullheight__bl">
 				<div class="fullheight__el-mod">
