--- a/src/dislife-text-search.html
+++ b/src/dislife-text-search.html
@@ -12,10 +12,10 @@
 		<div class="l-center">
 			<!-- begin search  -->
 			<form>
-				<label class="search">
+				<div class="search">
 					<button type="send" class="search__btn"><i class="fa fa-search"></i></button>
 					<input type="search" value="Россия">
-				</label>
+				</div>
 			</form>
 			<!-- end search -->
 			<!-- begin filter  -->
