--- a/src/dislife-text-special-puzzles-user.html
+++ b/src/dislife-text-special-puzzles-user.html
@@ -15,21 +15,6 @@
 					<div class="user-profile__imgs">
 						<div class="user-profile__title">Артюшкина Юлия Игоревна,</div>
 						<div class="user-profile__years">26 лет</div>
-						<div class="user-photo">
-							<a href="#" class="expand__link js-expand"><i class="fa fa-expand"></i></a>
-							<div class="user-photo__slider js-user-photo">
-								<div class="user-photo__item"><img src="https://placecage.com/1000/500" alt=""></div>
-								<div class="user-photo__item"><img src="https://placecage.com/500/500" alt=""></div>				
-							</div>
-						</div>
-						<div class="user-photos">
-							<button class="user-photos__arr user-photos__prev js-user-prev"><i class="fa fa-caret-left"></i></button>
-							<button class="user-photos__arr user-photos__next js-user-next"><i class="fa fa-caret-right"></i></button>
-							<div class="user-photos__slider js-user-photos">
-								<div class="user-photos__item"><img src="https://placecage.com/1000/500" alt=""></div>
-								<div class="user-photos__item"><img src="https://placecage.com/500/500" alt=""></div>		
-							</div>
-						</div>
 					</div>
 					<div class="user-profile__info">
 						<a href="#" class="btn-mail btn-mail_big">
@@ -37,6 +22,25 @@
 							<span>Написать</span>
 						</a>
 						<div class="user-profile__time">была на сайте 12 минут назад</div>
+					</div>
+					<div class="user-profile__imgs">
+						<div class="user-photo">
+							<a href="#" class="expand__link js-expand"><i class="fa fa-expand"></i></a>
+							<div class="user-photo__slider js-user-photo">
+								<div class="user-photo__item"><img src="https://fillmurray.com/1000/500" alt=""></div>
+								<div class="user-photo__item"><img src="https://placecage.com/500/500" alt=""></div>				
+							</div>
+						</div>
+						<div class="user-photos">
+							<button class="user-photos__arr user-photos__prev js-user-prev"><i class="fa fa-caret-left"></i></button>
+							<button class="user-photos__arr user-photos__next js-user-next"><i class="fa fa-caret-right"></i></button>
+							<div class="user-photos__slider js-user-photos">
+								<div class="user-photos__item"><img src="https://fillmurray.com/1000/500" alt=""></div>
+								<div class="user-photos__item"><img src="https://placecage.com/500/500" alt=""></div>		
+							</div>
+						</div>
+					</div>
+					<div class="user-profile__info">
 						<div class="profile-title">Лобня, Россия</div>
 						<ul class="user-profile__text">
 							<li>
@@ -209,7 +213,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="comments">
+				<div class="profile-block">
 					<div class="profile-title">Комментарии <span>12</span></div>
 					<div class="comment">
 						<div class="comment__top">
@@ -245,8 +249,43 @@
 						</a>
 					</div>
 				</div>
+				<div class="profile-block">
+					<div class="profile-title">Нравится <span>10</span><sup class="is-like"><i class="fa fa-heart"></i></sup></div>
+					<ul class="users-list">
+						<li><a href="#"><img src="https://placecage.com/80/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/133/100" alt=""></a></li>
+						<li><a href="#"><img src="https://fillmurray.com/g/100/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/85/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/100/100" alt=""></a></li>
+						<li><a href="#"><img src="https://fillmurray.com/69/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/75/100" alt=""></a></li>
+						<li><a href="#"><img src="https://fillmurray.com/100/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/g/100/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/86/100" alt=""></a></li>
+					</ul>
+				</div>
+				<div class="profile-block profile-block_mod">
+					<div class="profile-title">Не нравится <span>4</span><sup class="is-dislike"><i class="fa fa-heart"><i class="fa fa-bolt"></i></i></sup></div>
+					<ul class="users-list">
+						<li><a href="#"><img src="https://placecage.com/80/100" alt=""></a></li>
+						<li><a href="#"><img src="https://fillmurray.com/133/100" alt=""></a></li>
+						<li><a href="#"><img src="https://placecage.com/100/100" alt=""></a></li>
+						<li><a href="#"><img src="https://fillmurray.com/85/100" alt=""></a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="l-col2">
+			<div class="l-col2">	
+				<div class="profile-side">
+					<div class="block-alert block-alert_mod">
+						<i class="fa fa-exclamation-triangle"></i>
+						<p>Зарегистрируйтесь, чтобы смотреть анкеты и писать сообщения.</p>
+					</div>
+					<div class="banner-img">
+						<a href="#">
+							<img src="img/banner.jpg" alt="banner">
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
