--- a/src/dislife-text-special-puzzles-user.html
+++ b/src/dislife-text-special-puzzles-user.html
@@ -17,13 +17,13 @@
 						<div class="user-profile__years">26 лет</div>
 					</div>
 					<div class="user-profile__info">
-						<a href="#" class="btn-mail btn-mail_big">
+					<!-- 	<a href="#" class="btn-mail btn-mail_big">
 							<i class="fa fa-envelope"></i>
 							<span>Написать</span>
-						</a>
+						</a> -->
 						<div class="user-profile__time">была на сайте 12 минут назад</div>
 					</div>
-					<div class="user-profile__imgs">
+					<div class="user-profile__imgs js-user-gallery">
 						<div class="user-photo">
 							<a href="#" class="expand__link js-expand"><i class="fa fa-expand"></i></a>
 							<div class="user-photo__slider js-user-photo">
@@ -278,7 +278,7 @@
 				<div class="profile-side">
 					<div class="block-alert block-alert_mod">
 						<i class="fa fa-exclamation-triangle"></i>
-						<p>Зарегистрируйтесь, чтобы смотреть анкеты и писать сообщения.</p>
+						<p><a href="#">Зарегистрируйтесь</a>, чтобы смотреть анкеты и писать сообщения.</p>
 					</div>
 					<div class="banner-img">
 						<a href="#">
