--- a/src/dislife-text-special.html
+++ b/src/dislife-text-special.html
@@ -49,28 +49,28 @@
 		</div>
 		<div class="list-items">
 			<div class="list-items__title">КАК ЭТО РАБОТАЕТ</div>
-			<div class="list-item">
+			<a href="#" class="list-item">
 				<div class="list-item__number">1</div>
 				<div class="list-item__info">
 					<h5>Подготовить особенных детей к жизни в обычном мире</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">2</div>
 				<div class="list-item__info">
 					<h5>В этой школе учатся все</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">3</div>
 				<div class="list-item__info">
-					<a href="#" class="list-item__link">Инструкция</a>
+					<div class="list-item__link">Инструкция</div>
 					<h5>Как правильно экономить на авиабилетах?</h5>
 					<h5>Руководство к действию</h5>
 				</div>
-			</div>
+			</a>
 		</div>
 		<div class="item-banner item-banner_puzzles">
 			<a href="#" class="item-banner__bg" style="background-image: url(img/special-nogi.jpg);">
@@ -142,28 +142,28 @@
 		</div>
 		<div class="list-items">
 			<div class="list-items__title">КАК ЭТО РАБОТАЕТ</div>
-			<div class="list-item">
+			<a href="#" class="list-item">
 				<div class="list-item__number">1</div>
 				<div class="list-item__info">
 					<h5>Подготовить особенных детей к жизни в обычном мире</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">2</div>
 				<div class="list-item__info">
 					<h5>В этой школе учатся все</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">3</div>
 				<div class="list-item__info">
-					<a href="#" class="list-item__link">Инструкция</a>
+					<div class="list-item__link">Инструкция</div>
 					<h5>Как правильно экономить на авиабилетах?</h5>
 					<h5>Руководство к действию</h5>
 				</div>
-			</div>
+			</a>
 		</div>
 		<div class="item-banner item-banner_yellow">
 			<a href="#" class="item-banner__bg" style="background-image: url(img/bitmap2.jpg);">
@@ -182,28 +182,28 @@
 		</div>
 		<div class="list-items list-items_mod">
 			<div class="list-items__title">КАК ЭТО РАБОТАЕТ</div>
-			<div class="list-item">
+			<a href="#" class="list-item">
 				<div class="list-item__number">1</div>
 				<div class="list-item__info">
 					<h5>Подготовить особенных детей к жизни в обычном мире</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">2</div>
 				<div class="list-item__info">
 					<h5>В этой школе учатся все</h5>
 					<p>Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 				</div>
-			</div>
-			<div class="list-item">
+			</a>
+			<a href="#" class="list-item">
 				<div class="list-item__number">3</div>
 				<div class="list-item__info">
-					<a href="#" class="list-item__link">Инструкция</a>
+					<div class="list-item__link">Инструкция</div>
 					<h5>Как правильно экономить на авиабилетах?</h5>
 					<h5>Руководство к действию</h5>
 				</div>
-			</div>
+			</a>
 		</div>
 	</div>
 	//=include partials/more.html
