--- a/src/dislife-text-special-puzzles-user-in.html
+++ b/src/dislife-text-special-puzzles-user-in.html
@@ -285,13 +285,16 @@
 				</div>
 			</div>
 			<div class="l-col2">	
-				<ul class="special-menu">
+				<ul class="special-menu special-menu_nav js-nav" data-nav="user-nav">
 					<li><a href="#"><span>Моя анкета в «Пазлах»</span></a></li>
 					<li><a href="#" class="is-orange"><span>Сообщения</span><sup>12</sup></a></li>
 					<li><a href="#"><span>Фотографии</span></a></li>
 					<li><a href="#"><span>Друзья</span></a></li>
 					<li><a href="#"><span>Гости</span><sup>12</sup></a></li>
 					<li><a href="#"><span>Настройки</span></a></li>
+					<li class="is-hidden">
+						<a href="#" class="special-menu__out"><span>Выход</span><i class="fa fa-sign-out"></i></a>
+					</li>
 				</ul>
 			</div>
 		</div>
