--- a/src/dislife-text-special-puzzles-user-messages-compose.html
+++ b/src/dislife-text-special-puzzles-user-messages-compose.html
@@ -60,7 +60,7 @@
 					<div class="profile-menu">
 						<ul class="special-menu">
 							<li><a href="#"><span>Моя анкета в «Пазлах»</span></a></li>
-							<li><a href="#" class="is-orange"><span>Сообщения</span><sup>12</sup></a></li>
+							<li><a href="#" class="is-active is-orange"><span>Сообщения</span><sup>12</sup></a></li>
 							<li><a href="#"><span>Фотографии</span></a></li>
 							<li><a href="#"><span>Друзья</span></a></li>
 							<li><a href="#"><span>Гости</span><sup>12</sup></a></li>
