--- a/src/dislife-text-special-puzzles-v2.html
+++ b/src/dislife-text-special-puzzles-v2.html
@@ -7,7 +7,7 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	//=include partials/header-profile.html
+	//=include partials/header.html
 	<div class="fullheight fullheight_special" style="background-image: url(img/nogi-big.jpg)">
 		<div class="fullheight__in">
 			<div class="fullheight__bl">
@@ -190,6 +190,12 @@
 							<button class="btn-full btn-full_orange">
 								<span>Найти</span>
 							</button>
+						</div>
+					</div>
+					<div class="l-col2">
+						<div class="block-alert block-alert_mod">
+							<i class="fa fa-exclamation-triangle"></i>
+							<p><a href="#">Зарегистрируйтесь</a>, чтобы смотреть анкеты и писать сообщения.</p>
 						</div>
 					</div>
 				</form>
@@ -428,19 +434,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="l-col2">
-				<ul class="special-menu special-menu_nav js-nav" data-nav="user-nav">
-					<li><a href="#"><span>Моя анкета в «Пазлах»</span></a></li>
-					<li><a href="#" class="is-orange"><span>Сообщения</span><sup>12</sup></a></li>
-					<li><a href="#"><span>Фотографии</span></a></li>
-					<li><a href="#"><span>Друзья</span></a></li>
-					<li><a href="#"><span>Гости</span><sup>12</sup></a></li>
-					<li><a href="#"><span>Настройки</span></a></li>
-					<li class="is-hidden">
-						<a href="#" class="special-menu__out"><span>Выход</span><i class="fa fa-sign-out"></i></a>
-					</li>
-				</ul>
 			</div>
 		</div>
 	</div>
