--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 		<a href="dislife-text-special-bureau.html" target="_blank">dislife-text-special-bureau.html</a>
 		<a href="dislife-text-special-patronus.html" target="_blank">dislife-text-special-patronus.html</a>
 		<a href="dislife-text-special-puzzles.html" target="_blank">dislife-text-special-puzzles.html</a>
+		<a href="dislife-text-special-puzzles-v2.html" target="_blank">dislife-text-special-puzzles-v2.html</a>
 		<a href="dislife-text-special.html" target="_blank">dislife-text-special.html</a>
 		<a href="dislife-text-special-puzzles-user.html" target="_blank">dislife-text-special-puzzles-user.html</a>
 		<a href="dislife-text-special-puzzles-user-in.html" target="_blank">dislife-text-special-puzzles-user-in.html</a>
@@ -39,6 +40,8 @@
 		<a href="dislife-text-special-puzzles-user-photo.html" target="_blank">dislife-text-special-puzzles-user-photo.html</a>
 		<a href="dislife-text-special-puzzles-user-guests.html" target="_blank">dislife-text-special-puzzles-user-guests.html</a>
 		<a href="dislife-text-special-puzzles-user-friends.html" target="_blank">dislife-text-special-puzzles-user-friends.html</a>
+		<a href="dislife-text-special-puzzles-user-settings.html" target="_blank">dislife-text-special-puzzles-user-settings.html</a>
+		<a href="dislife-text-special-puzzles-user-profile.html" target="_blank">dislife-text-special-puzzles-user-profile.html</a>
 	</div>
 </div>
 <!-- END out-->
