--- a/src/dislife-allnews-1300.html
+++ b/src/dislife-allnews-1300.html
@@ -21,34 +21,34 @@
 							<small>сентября</small>
 						</div>
 						<div class="all-news__items">
-							<div class="all-news__item">
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
+							</a>
 							<div class="all-news__item all-news__item_image">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
@@ -57,13 +57,13 @@
 								</div>
 								<div class="all-news__img" style="background-image: url(https://placecage.com/200/200);"></div>
 							</div>
-							<div class="all-news__item">
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="all-news__section">
@@ -72,34 +72,34 @@
 							<small>сентября</small>
 						</div>
 						<div class="all-news__items">
-							<div class="all-news__item">
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
-							<div class="all-news__item">
+							</a>
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
+							</a>
 							<div class="all-news__item all-news__item_image">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
@@ -108,18 +108,18 @@
 								</div>
 								<div class="all-news__img" style="background-image: url(https://placecage.com/200/200);"></div>
 							</div>
-							<div class="all-news__item">
+							<a href="#" class="all-news__item">
 								<div class="all-news__info">
 									<h5 class="all-news__title">Правительство не вернет сигарет</h5>
 									<div class="all-news__text">Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</div>
 									<time class="all-news__time">20:27</time>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-xs">
+			<div class="col-xs col-xs_mod">
 				<div class="social">
 					<div class="social__title"><a href="#">Кто мы такие?</a></div>
 					<ul class="social__list">
