--- a/src/dislife-main-medicine.html
+++ b/src/dislife-main-medicine.html
@@ -56,7 +56,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs">
+			<div class="col-xs col-xs_mod">
 				<div class="social">
 					<div class="social__title"><a href="#">Кто мы такие?</a></div>
 					<ul class="social__list">
@@ -319,5 +319,6 @@
 	//=include partials/footer.html 
 </div>
 <!-- END out-->
+//=include partials/popups.html
 </body>
 </html>
