--- a/src/dislife-main-polytique.html
+++ b/src/dislife-main-polytique.html
@@ -107,7 +107,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-xs">
+			<div class="col-xs col-xs_mod">
 				<div class="social">
 					<div class="social__title"><a href="#">Кто мы такие?</a></div>
 					<ul class="social__list">
@@ -370,5 +370,6 @@
 	//=include partials/footer.html 
 </div>
 <!-- END out-->
+//=include partials/popups.html
 </body>
 </html>
