--- a/src/dislife-text-special.html
+++ b/src/dislife-text-special.html
@@ -18,11 +18,11 @@
 			</div>
 			<div class="l-col2">
 				<div class="special-right">
-					<button class="btn-full">
+					<button class="btn-full js-open-popup" data-link="popup-login">
 						<span>Вход </span>
 					</button>
 					<div>
-						<a href="#" class="link">Регистрация</a>
+						<a href="#" class="link is-registration js-open-popup" data-link="popup-login">Регистрация</a>
 					</div>
 					<div class="social">
 						<div class="social__title"><a href="#">Кто мы такие?</a></div>
@@ -210,5 +210,6 @@
 	//=include partials/footer.html
 </div>
 <!-- END out-->
+//=include partials/popups.html
 </body>
 </html>
